--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- 导入第三方图标 -->
-    <link rel="stylesheet" href="./assets/fonts/iconfont.css">
+    <link rel="stylesheet" href="/assets/fonts/iconfont.css">
     <!-- 导入layui样式表 -->
-    <link rel="stylesheet" href="./assets/lib/layui/css/layui.css">
+    <link rel="stylesheet" href="/assets/lib/layui/css/layui.css">
     <!-- 导入自己的样式表 -->
-    <link rel="stylesheet" href="./assets/css/index.css">
+    <link rel="stylesheet" href="/assets/css/index.css">
 </head>
 
 <body class="layui-layout-body">
@@ -41,7 +41,7 @@
                         退出
                     </a>
                 </li>
-            </ul>  
+            </ul>
         </div>
 
         <div class="layui-side layui-bg-black">
@@ -67,13 +67,23 @@
                         </a>
                         <dl class="layui-nav-child">
                             <dd>
-                                <a href="javascript:;">
+                                <a href="/article/art_cate.html" target="fm">
                                     <i class="layui-icon layui-icon-app"></i>
                                     文章类别
                                 </a>
                             </dd>
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-list"></i>文章列表</a></dd>
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-edit"></i>发布文章</a></dd>
+                            <dd>
+                                <a href="/article/art_list.html" target="fm">
+                                    <i class="layui-icon layui-icon-list"></i>
+                                    文章列表
+                                </a>
+                            </dd>
+                            <dd>
+                                <a href="/article/art_pub.html" target="fm">
+                                    <i class="layui-icon layui-icon-edit"></i>
+                                    发布文章
+                                </a>
+                            </dd>
                         </dl>
                     </li>
                     <li class="layui-nav-item">
@@ -82,9 +92,12 @@
                             个人中心
                         </a>
                         <dl class="layui-nav-child">
-                            <dd><a href="/user/user_info.html" target="fm"><i class="layui-icon layui-icon-friends" ></i>基本资料</a></dd>
-                            <dd><a href="/user/user_avatar.html" target="fm"><i class="layui-icon layui-icon-face-surprised"></i>更换头像</a></dd>
-                            <dd><a href="/user/user_pwd.html" target="fm"><i class="layui-icon layui-icon-password"></i>重置密码</a></dd>
+                            <dd><a href="/user/user_info.html" target="fm"><i
+                                        class="layui-icon layui-icon-friends"></i>基本资料</a></dd>
+                            <dd><a href="/user/user_avatar.html" target="fm"><i
+                                        class="layui-icon layui-icon-face-surprised"></i>更换头像</a></dd>
+                            <dd><a href="/user/user_pwd.html" target="fm"><i
+                                        class="layui-icon layui-icon-password"></i>重置密码</a></dd>
                         </dl>
                     </li>
                 </ul>
